tests/baselines/reference/implementClausePrecedingExtends.errors.txt
==== tests/cases/compiler/implementClausePrecedingExtends.ts (3 errors) ====
    class C { foo: number }
    class D implements C extends C { }
                         ~~~~~~~
!!! error TS1005: '{' expected.
                                   ~
!!! error TS1005: ';' expected.
          ~
!!! error TS2421: Class 'D' incorrectly implements interface 'C':
!!! error TS2421:   Property 'foo' is missing in type 'D'.